@@ -5,6 +5,7 @@ Released ????? ??, ????
 
 - Added Japanese holidays for new Emperor (kokinamura)
 - Fixed Australian Canberra day holiday (explodingdinosaurs, dr-p)
+- Added support for Estonian holidays (RaulVS14)
 
 Version 0.9.10
 ==============
